--- a/login.html
+++ b/login.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OmniLeadz | Zoti</title>
-    <link rel="stylesheet" href="login.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
-  </head>
-  <body>
-    <div class="container">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>OmniLeadz | Zoti</title>
+  <link rel="stylesheet" href="login.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+</head>
+
+<body>
+  <div class="container">
+    <div class="left-circle-1">
+
+    </div>
+    <div class="left-circle-2">
+
+    </div>
+
+    <div class="left-circle-3">
+
+    </div>
+    <div class="left-circle-4">
+
+    </div>
     <div class="form-body">
+      <img class="form-circle" src="https://omnileadzdev.s3.amazonaws.com/NjVlMDhhYjUwMDNlZWY4NmNlNWQwYmY5/1718542464930_blob" alt="O/Z"/>
       <form action="">
-        <h1>OmniLeadz | Zoti</h1>
+
+        <h1 class="form-logo-1"><img src="https://omnileadzdev.s3.amazonaws.com/NjVlMDhhYjUwMDNlZWY4NmNlNWQwYmY5/1718543117046_blob" alt="o/z"/>mniLeadz &nbsp; | &nbsp; <img class="form-logo-2" src="https://omnileadzdev.s3.amazonaws.com/NjVlMDhhYjUwMDNlZWY4NmNlNWQwYmY5/1718543117040_blob" alt="o/z"/></h1>
         <h1>Login</h1>
         <span>Username</span>
         <div class="input-box">
@@ -30,16 +44,17 @@
           <a href="#">Forgot password</a>
         </div>
         <button type="submit" class="btn">
-          <i class="fa-solid fa-z"></i> Login
+          <i class="fa-solid fa-envelope"></i><p> Login in with Email & Password</p>
         </button>
         <button type="submit" class="btn">
-          <i class="fa-brands fa-google"></i> Login with Google
+          <i class="fa-brands fa-google"></i><p> Login with Google</p>
         </button>
         <button type="submit" class="btn">
-          <i class="fa-sharp fa-solid fa-phone"></i> Login with Mobile
+          <i class="fa-sharp fa-solid fa-phone"></i><p> Login with Mobile</p>
         </button>
       </form>
     </div>
   </div>
-  </body>
+</body>
+
 </html>
