--- a/login.html
+++ b/login.html
@@ -25,11 +25,15 @@
 
     </div>
     <div class="form-body">
-      <img class="form-circle" src="https://omnileadzdev.s3.amazonaws.com/NjVlMDhhYjUwMDNlZWY4NmNlNWQwYmY5/1718542464930_blob" alt="O/Z"/>
+      <img class="form-circle"
+        src="https://omnileadzdev.s3.amazonaws.com/NjVlMDhhYjUwMDNlZWY4NmNlNWQwYmY5/1718542464930_blob" alt="O/Z" />
       <form action="">
+        <section class="logo-section">
+          <div class="form-logo-1"><img src="https://omnileadzdev.s3.amazonaws.com/NjVlMDhhYjUwMDNlZWY4NmNlNWQwYmY5/1718543117046_blob" alt="o/z"/><h1>mniLeadz</h1></div>
+          <span class="seperator"> | </span>
+          <img class="form-logo-2" src="https://omnileadzdev.s3.amazonaws.com/NjVlMDhhYjUwMDNlZWY4NmNlNWQwYmY5/1718715210404_blob" alt="o/z"/>
+        </section>
 
-        <h1 class="form-logo-1"><img src="https://omnileadzdev.s3.amazonaws.com/NjVlMDhhYjUwMDNlZWY4NmNlNWQwYmY5/1718543117046_blob" alt="o/z"/>mniLeadz &nbsp; | &nbsp; <img class="form-logo-2" src="https://omnileadzdev.s3.amazonaws.com/NjVlMDhhYjUwMDNlZWY4NmNlNWQwYmY5/1718543117040_blob" alt="o/z"/></h1>
-        <h1>Login</h1>
         <span>Username</span>
         <div class="input-box">
           <input type="text" placeholder="Username" required />
@@ -44,13 +48,16 @@
           <a href="#">Forgot password</a>
         </div>
         <button type="submit" class="btn">
-          <i class="fa-solid fa-envelope"></i><p> Login in with Email & Password</p>
+          <i class="fa-solid fa-envelope"></i>
+          <p> Login in with Email & Password</p>
         </button>
         <button type="submit" class="btn">
-          <i class="fa-brands fa-google"></i><p> Login with Google</p>
+          <i class="fa-brands fa-google"></i>
+          <p> Login with Google</p>
         </button>
         <button type="submit" class="btn">
-          <i class="fa-sharp fa-solid fa-phone"></i><p> Login with Mobile</p>
+          <i class="fa-sharp fa-solid fa-phone"></i>
+          <p> Login with Mobile</p>
         </button>
       </form>
     </div>
